// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mahjong scoring all even pungs double pung 1`] = `
"29

b8 c8

ALL_EVEN_PUNGS
DOUBLE_PUNG (m_pung b4, c_pung d4)
TWO_CONCEALED_PUNGS (c_pung b8, c_pung d4)
SELF_DRAWN

m_pung b4
c_pung b8
c_pung d4
m_pung d6
c_pair c8"
`;

exports[`mahjong scoring all even pungs triple pung 1`] = `
"53

c8 d8

ALL_EVEN_PUNGS
TRIPLE_PUNG (m_pung b6, m_pung c6, m_pung d6)
UPPER_FOUR
SELF_DRAWN

m_pung b6
m_pung c6
c_pung c8
m_pung d6
c_pair d8"
`;

exports[`mahjong scoring all green pure shifted pungs 1`] = `
"127

b6 Dg

ALL_GREEN
PURE_SHIFTED_PUNGS (m_pung b2, m_pung b3, m_pung b4)
ALL_PUNGS
HALF_FLUSH
DRAGON_PUNG (c_pung Dg)
SELF_DRAWN

m_pung b2
m_pung b3
m_pung b4
c_pung Dg
c_pair b6"
`;

exports[`mahjong scoring all green seven pairs 1`] = `
"124

Dg

ALL_GREEN
SEVEN_PAIRS
HALF_FLUSH
FULLY_CONCEALED_HAND
TILE_HOG (b8)

c_pair b2
c_pair b3
c_pair b4
c_pair b6
c_pair b8
c_pair b8
c_pair Dg"
`;

exports[`mahjong scoring all green triple chow 1`] = `
"144

b6

ALL_GREEN
FULL_FLUSH
PURE_TRIPLE_CHOW (m_chow b3, m_chow b3, m_chow b3)
MELDED_HAND
ALL_SIMPLES

m_pung b8
m_chow b3
m_chow b3
m_chow b3
m_pair b6"
`;

exports[`mahjong scoring all honors big three winds 1`] = `
"83

Dg Dw

ALL_HONORS
BIG_THREE_WINDS (m_pung We, m_pung Ww, m_pung Wn)
DRAGON_PUNG (c_pung Dw)
PREVALENT_WIND (m_pung We)
SEAT_WIND (m_pung We)
SELF_DRAWN

m_pung We
m_pung Ww
m_pung Wn
c_pung Dw
c_pair Dg"
`;

exports[`mahjong scoring all honors little three dragons 1`] = `
"138

Dw

LITTLE_THREE_DRAGONS (m_pung Dr, m_pung Dg, m_pair Dw)
ALL_HONORS
MELDED_HAND
PREVALENT_WIND (m_pung We)
SEAT_WIND (m_pung We)

m_pung We
m_pung Ww
m_pung Dr
m_pung Dg
m_pair Dw"
`;

exports[`mahjong scoring all terminals and honors all types 1`] = `
"60

Ws

ALL_TERMINALS_AND_HONORS
THREE_CONCEALED_PUNGS (c_pung b9, c_pung c1, c_pung d1)
ALL_TYPES
DRAGON_PUNG (m_pung Dr)
DOUBLE_PUNG (c_pung c1, c_pung d1)
SINGLE_WAIT
SELF_DRAWN

c_pung b9
c_pung c1
c_pung d1
m_pung Dr
c_pair Ws"
`;

exports[`mahjong scoring all terminals and honors seven pairs 1`] = `
"65

Dg

ALL_TERMINALS_AND_HONORS
SEVEN_PAIRS
FULLY_CONCEALED_HAND
TILE_HOG (c1)
TILE_HOG (d1)
ONE_VOIDED_SUIT

c_pair c1
c_pair c1
c_pair d1
c_pair d1
c_pair Dr
c_pair Dg
c_pair Dw"
`;

exports[`mahjong scoring all terminals double pung x2 1`] = `
"72

c1

ALL_TERMINALS
DOUBLE_PUNG (m_pung b1, m_pung d1)
DOUBLE_PUNG (c_pung b9, c_pung c9)
TWO_CONCEALED_PUNGS (c_pung b9, c_pung c9)
SINGLE_WAIT
SELF_DRAWN

m_pung b1
c_pung b9
c_pung c9
m_pung d1
c_pair c1"
`;

exports[`mahjong scoring all terminals triple pung 1`] = `
"86

b1

ALL_TERMINALS
TRIPLE_PUNG (m_pung b9, m_pung c9, m_pung d9)
MELDED_HAND

m_pung b9
m_pung c9
m_pung d1
m_pung d9
m_pair b1"
`;

exports[`mahjong scoring basic scoring basic mahjong 1`] = `
"221

Dr

BIG_FOUR_WINDS (c_pung We, c_pung Ws, c_pung Ww, c_pung Wn)
ALL_HONORS
FOUR_CONCEALED_PUNGS (c_pung We, c_pung Ws, c_pung Ww, c_pung Wn)
FULLY_CONCEALED_HAND
SINGLE_WAIT

c_pung We
c_pung Ws
c_pung Ww
c_pung Wn
c_pair Dr"
`;

exports[`mahjong scoring big four winds half flush 1`] = `
"97

c6 Wn

BIG_FOUR_WINDS (m_pung We, m_pung Ws, c_pung Ww, c_pung Wn)
HALF_FLUSH
TWO_CONCEALED_PUNGS (c_pung Ww, c_pung Wn)
SELF_DRAWN

m_pung We
m_pung Ws
c_pung Ww
c_pung Wn
c_pair c6"
`;

exports[`mahjong scoring big four winds honors 1`] = `
"171

Dr Wn

BIG_FOUR_WINDS (c_kong We, m_pung Ws, c_pung Ww, c_pung Wn)
ALL_HONORS
THREE_CONCEALED_PUNGS (c_kong We, c_pung Ww, c_pung Wn)
CONCEALED_KONG (c_kong We)
SELF_DRAWN

c_kong We
m_pung Ws
c_pung Ww
c_pung Wn
c_pair Dr"
`;

exports[`mahjong scoring big four winds terminals 1`] = `
"144

b9 Wn

BIG_FOUR_WINDS (c_pung We, c_pung Ws, c_pung Ww, m_pung Wn)
ALL_TERMINALS_AND_HONORS
THREE_CONCEALED_PUNGS (c_pung We, c_pung Ws, c_pung Ww)
HALF_FLUSH
CONCEALED_HAND

c_pung We
c_pung Ws
c_pung Ww
m_pung Wn
c_pair b9"
`;

exports[`mahjong scoring big three dragons half flush 1`] = `
"95

c5 c8

BIG_THREE_DRAGONS (m_pung Dr, m_pung Dg, m_pung Dw)
HALF_FLUSH
SELF_DRAWN

m_pung Dr
m_pung Dg
m_pung Dw
c_chow c6
c_pair c5"
`;

exports[`mahjong scoring big three dragons honors 1`] = `
"221

Wn

BIG_THREE_DRAGONS (c_pung Dr, c_pung Dg, c_pung Dw)
ALL_HONORS
FOUR_CONCEALED_PUNGS (c_pung Ww, c_pung Dr, c_pung Dg, c_pung Dw)
PREVALENT_WIND (c_pung Ww)
SEAT_WIND (c_pung Ww)
SINGLE_WAIT

c_pung Ww
c_pung Dr
c_pung Dg
c_pung Dw
m_pair Wn"
`;

exports[`mahjong scoring big three dragons terminals 1`] = `
"127

b1

BIG_THREE_DRAGONS (m_pung Dr, m_pung Dg, m_pung Dw)
ALL_TERMINALS_AND_HONORS
MELDED_HAND
ONE_VOIDED_SUIT

m_pung d9
m_pung Dr
m_pung Dg
m_pung Dw
m_pair b1"
`;

exports[`mahjong scoring four concealed pungs from discard 1`] = `
"67

b8

FOUR_CONCEALED_PUNGS (c_pung b5, c_pung c8, c_pung d1, c_pung d7)
PUNG_OF_TERMINALS_OR_HONORS (c_pung d1)
NO_HONORS
SINGLE_WAIT

c_pung b5
c_pung c8
c_pung d1
c_pung d7
m_pair b8"
`;

exports[`mahjong scoring four concealed pungs from wall 1`] = `
"69

c9 Ww

FOUR_CONCEALED_PUNGS (c_pung b7, c_pung c9, c_pung d3, c_pung d4)
FULLY_CONCEALED_HAND
PUNG_OF_TERMINALS_OR_HONORS (c_pung c9)

c_pung b7
c_pung c9
c_pung d3
c_pung d4
c_pair Ww"
`;

exports[`mahjong scoring four kongs all types 1`] = `
"97

We

FOUR_KONGS (c_kong b3, m_kong c5, m_kong d8, m_kong Dr)
ALL_TYPES
DRAGON_PUNG (m_kong Dr)
SELF_DRAWN

c_kong b3
m_kong c5
m_kong d8
m_kong Dr
c_pair We"
`;

exports[`mahjong scoring four kongs big three dragons 1`] = `
"246

We

BIG_THREE_DRAGONS (m_kong Dr, m_kong Dg, m_kong Dw)
FOUR_KONGS (m_kong Wn, m_kong Dr, m_kong Dg, m_kong Dw)
ALL_HONORS
MELDED_HAND

m_kong Wn
m_kong Dr
m_kong Dg
m_kong Dw
m_pair We"
`;

exports[`mahjong scoring four pure shifted chows shifted by 1 1`] = `
"66

c1 c2 c4 c5 c7

FOUR_PURE_SHIFTED_CHOWS (c_chow c3, c_chow c4, c_chow c5, c_chow c6)
FULL_FLUSH
FULLY_CONCEALED_HAND
ALL_CHOWS
TILE_HOG (c6)
ALL_SIMPLES

c_chow c3
c_chow c4
c_chow c5
c_chow c6
c_pair c6"
`;

exports[`mahjong scoring four pure shifted chows shifted by 2 1`] = `
"37

b9

FOUR_PURE_SHIFTED_CHOWS (m_chow d2, c_chow d4, c_chow d6, c_chow d8)
ALL_CHOWS
ONE_VOIDED_SUIT
SINGLE_WAIT
SELF_DRAWN

m_chow d2
c_chow d4
c_chow d6
c_chow d8
c_pair b9"
`;

exports[`mahjong scoring four pure shifted pungs full flush 1`] = `
"90

c4 c5 c6 c7 c9

FOUR_PURE_SHIFTED_PUNGS (c_pung c6, c_pung c7, c_pung c8, m_pung c9)
FULL_FLUSH
THREE_CONCEALED_PUNGS (c_pung c6, c_pung c7, c_pung c8)
PUNG_OF_TERMINALS_OR_HONORS (m_pung c9)
SELF_DRAWN

c_pung c6
c_pung c7
c_pung c8
m_pung c9
c_pair c5"
`;

exports[`mahjong scoring four pure shifted pungs lower four 1`] = `
"64

c1

FOUR_PURE_SHIFTED_PUNGS (m_pung b1, m_pung b2, m_pung b3, c_pung b4)
LOWER_FOUR
PUNG_OF_TERMINALS_OR_HONORS (m_pung b1)
ONE_VOIDED_SUIT
SINGLE_WAIT
SELF_DRAWN

m_pung b1
m_pung b2
m_pung b3
c_pung b4
c_pair c1"
`;

exports[`mahjong scoring full flush pure straight 1`] = `
"43

d4 d7

FULL_FLUSH
PURE_STRAIGHT (m_chow d2, c_chow d5, c_chow d8)
ALL_CHOWS
SELF_DRAWN

m_chow d2
c_chow d5
c_chow d6
c_chow d8
c_pair d2"
`;

exports[`mahjong scoring full flush seven pairs 1`] = `
"52

b9

SEVEN_PAIRS
FULL_FLUSH
FULLY_CONCEALED_HAND

c_pair b1
c_pair b2
c_pair b4
c_pair b5
c_pair b6
c_pair b8
c_pair b9"
`;

exports[`mahjong scoring full flush short straight 1`] = `
"28

c7

FULL_FLUSH
SHORT_STRAIGHT (c_chow c4, c_chow c7)
PUNG_OF_TERMINALS_OR_HONORS (m_pung c1)
CLOSED_WAIT
SELF_DRAWN

m_pung c1
c_chow c3
c_chow c4
c_chow c7
c_pair c5"
`;

exports[`mahjong scoring greater honors and knitted tiles c1d3b3 1`] = `
"24

c2 c5 c8

GREATER_HONORS_AND_KNITTED_TILES"
`;

exports[`mahjong scoring greater honors and knitted tiles d2b2c3 1`] = `
"28

b2 d7 Dw

GREATER_HONORS_AND_KNITTED_TILES
FULLY_CONCEALED_HAND"
`;

exports[`mahjong scoring little four winds all honors 1`] = `
"135

Dg Wn

LITTLE_FOUR_WINDS (m_pung We, m_pung Ws, m_pung Ww, c_pair Wn)
ALL_HONORS
DRAGON_PUNG (c_pung Dg)
PREVALENT_WIND (m_pung We)
SEAT_WIND (m_pung We)
SELF_DRAWN

m_pung We
m_pung Ws
m_pung Ww
c_pung Dg
c_pair Wn"
`;

exports[`mahjong scoring little four winds half flush 1`] = `
"80

Wn

LITTLE_FOUR_WINDS (m_pung We, m_pung Ws, m_pung Ww, c_pair Wn)
HALF_FLUSH
OUTSIDE_HAND
PREVALENT_WIND (m_pung We)
SEAT_WIND (m_pung We)
SINGLE_WAIT
SELF_DRAWN

m_pung We
m_pung Ws
m_pung Ww
c_chow d8
c_pair Wn"
`;

exports[`mahjong scoring little three dragons all terminals and honors 1`] = `
"108

Dr

LITTLE_THREE_DRAGONS (m_pung Dg, m_pung Dw, m_pair Dr)
ALL_TERMINALS_AND_HONORS
HALF_FLUSH
MELDED_HAND

m_pung b1
m_pung b9
m_pung Dg
m_pung Dw
m_pair Dr"
`;

exports[`mahjong scoring little three dragons pung of terminals 1`] = `
"68

d4

LITTLE_THREE_DRAGONS (m_pung Dr, m_pung Dw, c_pair Dg)
PUNG_OF_TERMINALS_OR_HONORS (c_pung c1)
ONE_VOIDED_SUIT
CLOSED_WAIT
SELF_DRAWN

c_pung c1
m_pung Dr
m_pung Dw
c_chow d4
c_pair Dg"
`;

exports[`mahjong scoring lower tiles mixed shifted pungs 1`] = `
"47

d2

LOWER_TILES
MIXED_SHIFTED_PUNGS (m_pung b3, m_pung c2, m_pung d1)
ALL_PUNGS
MELDED_HAND
DOUBLE_PUNG (m_pung b3, m_pung c3)
PUNG_OF_TERMINALS_OR_HONORS (m_pung d1)

m_pung b3
m_pung c2
m_pung c3
m_pung d1
m_pair d2"
`;

exports[`mahjong scoring lower tiles mixed triple chow 1`] = `
"37

c2

LOWER_TILES
MIXED_TRIPLE_CHOW (c_chow b2, c_chow c2, m_chow d2)
ALL_CHOWS
PURE_DOUBLE_CHOW (m_chow d2, c_chow d2)
CLOSED_WAIT
SELF_DRAWN

c_chow b2
c_chow c2
m_chow d2
c_chow d2
c_pair c2"
`;

exports[`mahjong scoring middle tiles pure shifted pungs 1`] = `
"50

d4 d7

PURE_SHIFTED_PUNGS (m_pung c4, m_pung c5, c_pung c6)
MIDDLE_TILES
ONE_VOIDED_SUIT
SELF_DRAWN

m_pung c4
m_pung c5
c_pung c6
c_chow d5
c_pair d4"
`;

exports[`mahjong scoring middle tiles seven pairs 1`] = `
"52

b5

SEVEN_PAIRS
MIDDLE_TILES
FULLY_CONCEALED_HAND

c_pair b4
c_pair b5
c_pair b6
c_pair c4
c_pair c5
c_pair d4
c_pair d6"
`;

exports[`mahjong scoring nine gates edge 1`] = `
"110

c1 c2 c3 c4 c5 c6 c7 c8 c9

NINE_GATES
PURE_STRAIGHT (c_chow c2, c_chow c5, c_chow c8)
FULLY_CONCEALED_HAND
TILE_HOG (c9)

c_pung c9
c_chow c2
c_chow c5
c_chow c8
c_pair c1"
`;

exports[`mahjong scoring nine gates middle 1`] = `
"94

c1 c2 c3 c4 c5 c6 c7 c8 c9

NINE_GATES
FULLY_CONCEALED_HAND
TWO_CONCEALED_PUNGS (c_pung c1, c_pung c9)

c_pung c1
c_pung c9
c_chow c3
c_chow c7
c_pair c5"
`;

exports[`mahjong scoring pure shifted pungs half flush 1`] = `
"41

c9 Dg

PURE_SHIFTED_PUNGS (m_pung c1, m_pung c2, c_pung c3)
ALL_PUNGS
HALF_FLUSH
TWO_CONCEALED_PUNGS (c_pung c3, c_pung c9)
PUNG_OF_TERMINALS_OR_HONORS (m_pung c1)
PUNG_OF_TERMINALS_OR_HONORS (c_pung c9)
SELF_DRAWN

m_pung c1
m_pung c2
c_pung c3
c_pung c9
c_pair Dg"
`;

exports[`mahjong scoring pure shifted pungs reversible tiles 1`] = `
"58

d3

PURE_SHIFTED_PUNGS (c_pung b4, c_pung b5, c_pung b6)
THREE_CONCEALED_PUNGS (c_pung b4, c_pung b5, c_pung b6)
REVERSIBLE_TILES
ALL_PUNGS
DRAGON_PUNG (m_pung Dw)
SINGLE_WAIT
SELF_DRAWN

c_pung b4
c_pung b5
c_pung b6
m_pung Dw
c_pair d3"
`;

exports[`mahjong scoring pure straight all chows 1`] = `
"23

d4 d7

PURE_STRAIGHT (c_chow b2, c_chow b5, c_chow b8)
FULLY_CONCEALED_HAND
ALL_CHOWS
MIXED_DOUBLE_CHOW (c_chow b5, c_chow d5)

c_chow b2
c_chow b5
c_chow b8
c_chow d5
c_pair c6"
`;

exports[`mahjong scoring pure straight dragon pung 1`] = `
"21

d4

PURE_STRAIGHT (c_chow c2, c_chow c5, c_chow c8)
DRAGON_PUNG (m_pung Dg)
ONE_VOIDED_SUIT
SINGLE_WAIT
SELF_DRAWN

m_pung Dg
c_chow c2
c_chow c5
c_chow c8
c_pair d4"
`;

exports[`mahjong scoring pure terminal chows basic 1`] = `
"66

d5

PURE_TERMINAL_CHOWS
SINGLE_WAIT
SELF_DRAWN

m_chow d2
c_chow d2
c_chow d8
c_chow d8
c_pair d5"
`;

exports[`mahjong scoring pure triple chow all fives 1`] = `
"44

b5

PURE_TRIPLE_CHOW (m_chow c4, c_chow c4, c_chow c4)
ALL_FIVES
ALL_CHOWS
SINGLE_WAIT
SELF_DRAWN

m_chow c4
c_chow c4
c_chow c4
c_chow d6
c_pair b5"
`;

exports[`mahjong scoring pure triple chow half flush 1`] = `
"38

Ww

PURE_TRIPLE_CHOW (m_chow c8, c_chow c8, c_chow c8)
HALF_FLUSH
OUTSIDE_HAND
DRAGON_PUNG (c_pung Dr)
SINGLE_WAIT
SELF_DRAWN

c_pung Dr
m_chow c8
c_chow c8
c_chow c8
c_pair Ww"
`;

exports[`mahjong scoring quadruple chow basic 1`] = `
"57

c9

QUADRUPLE_CHOW (m_chow b2, c_chow b2, c_chow b2, c_chow b2)
OUTSIDE_HAND
ALL_CHOWS
ONE_VOIDED_SUIT
SINGLE_WAIT
SELF_DRAWN

m_chow b2
c_chow b2
c_chow b2
c_chow b2
c_pair c9"
`;

exports[`mahjong scoring quadruple chow concealed 1`] = `
"59

b3 c9

QUADRUPLE_CHOW (c_chow b2, c_chow b2, c_chow b2, c_chow b2)
OUTSIDE_HAND
FULLY_CONCEALED_HAND
ALL_CHOWS
ONE_VOIDED_SUIT

c_chow b2
c_chow b2
c_chow b2
c_chow b2
c_pair c9"
`;

exports[`mahjong scoring seven pairs all types 1`] = `
"30

We

SEVEN_PAIRS
ALL_TYPES

c_pair b3
c_pair c1
c_pair d2
m_pair We
c_pair Dr
c_pair Dg
c_pair Dw"
`;

exports[`mahjong scoring seven pairs lower four 1`] = `
"70

c3

SEVEN_PAIRS
FULL_FLUSH
LOWER_FOUR
FULLY_CONCEALED_HAND
TILE_HOG (c1)
TILE_HOG (c2)
TILE_HOG (c4)

c_pair c1
c_pair c1
c_pair c2
c_pair c2
c_pair c3
c_pair c4
c_pair c4"
`;

exports[`mahjong scoring seven shifted pairs all simples 1`] = `
"94

b2 b5 b8

SEVEN_SHIFTED_PAIRS
FULLY_CONCEALED_HAND
ALL_SIMPLES

c_pair b2
c_pair b3
c_pair b4
c_pair b5
c_pair b6
c_pair b7
c_pair b8"
`;

exports[`mahjong scoring thirteen orphans basic 1`] = `
"92

b1 b9 c1 c9 d1 d9 Dr Dg Dw We Ws Ww Wn

THIRTEEN_ORPHANS
FULLY_CONCEALED_HAND"
`;

exports[`mahjong scoring three kongs all types 1`] = `
"50

b1

THREE_KONGS (c_kong c9, m_kong Ww, c_kong Dr)
ALL_TYPES
OUTSIDE_HAND
DRAGON_PUNG (c_kong Dr)
TWO_CONCEALED_PUNGS (c_kong c9, c_kong Dr)
PUNG_OF_TERMINALS_OR_HONORS (c_kong c9)
PUNG_OF_TERMINALS_OR_HONORS (m_kong Ww)
SINGLE_WAIT
SELF_DRAWN

c_kong c9
m_kong Ww
c_kong Dr
c_chow d2
c_pair b1"
`;

exports[`mahjong scoring three kongs upper tiles 1`] = `
"108

d9

THREE_KONGS (c_kong b9, c_kong c7, m_kong c8)
PURE_SHIFTED_PUNGS (c_kong c7, m_kong c8, c_pung c9)
UPPER_TILES
THREE_CONCEALED_PUNGS (c_kong b9, c_kong c7, c_pung c9)
ALL_PUNGS
DOUBLE_PUNG (c_kong b9, c_pung c9)
PUNG_OF_TERMINALS_OR_HONORS (c_kong b9)
PUNG_OF_TERMINALS_OR_HONORS (c_pung c9)
SINGLE_WAIT
SELF_DRAWN

c_kong b9
c_kong c7
m_kong c8
c_pung c9
c_pair d9"
`;

exports[`mahjong scoring upper tiles double pung 1`] = `
"30

c8 d8

UPPER_TILES
TILE_HOG (c8)
DOUBLE_PUNG (m_pung b8, c_pung c8)
MIXED_DOUBLE_CHOW (c_chow c8, c_chow d8)
SELF_DRAWN

m_pung b8
c_pung c8
c_chow c8
c_chow d8
c_pair d8"
`;

exports[`mahjong scoring upper tiles mixed triple chow 1`] = `
"40

c7

UPPER_TILES
MIXED_TRIPLE_CHOW (c_chow b8, c_chow c8, c_chow d8)
FULLY_CONCEALED_HAND
ALL_CHOWS
PURE_DOUBLE_CHOW (c_chow b8, c_chow b8)
EDGE_WAIT

c_chow b8
c_chow b8
c_chow c8
c_chow d8
c_pair c7"
`;
